--- a/perfildealumnopsico3121.html
+++ b/perfildealumnopsico3121.html
@@ -24,19 +24,19 @@
 </head>
 <body>
   <p class="muy-grande">Perfil Académico</p>
-  <p class="grande">GARAY LEGUIZAMON<br>LIZ VICTORIA</p>
+  <p class="grande">LÓPEZ GIMÉNEZ<br>CELESTINO</p>
  	<p><b>Título obtenido</b></p>
-	<p>Licenciada en Psicología</p>  
+	<p>Licenciado en Administración de Empresa</p>  
 	<p><b>Denominación de la carrera</b></p>
-	<p>Licenciatura en Psicología</p>
+	<p>Licenciatura en Administración de Empresa</p>
 	<p><b>Institución</b></p>
-	<p>Universidad Politécnica y Artística del Paraguay</p>  
+	<p>Instituto Superior en Ciencias Emresariales CENTURIA</p>  
 	<p><b>Departamento</b></p>
-	<p>Cordillera</p>
+	<p>Central</p>
 	<p><b>Ciudad</b></p>
-	<p>Caacupé</p>
+	<p>Asunción</p>
 	<p><b>Fecha:</b></p>
-	<p>2024-06-28</p>
+	<p>2024-11-28</p>
 	<p><b>Tipo</b></p>
 	<p>Resolución</p>  
 	<p><b>Responsable:</b></p>
