--- a/perfildealumnopsico3121.html
+++ b/perfildealumnopsico3121.html
@@ -30,7 +30,7 @@
 	<p><b>Denominación de la carrera</b></p>
 	<p>Licenciatura en Administración de Empresa</p>
 	<p><b>Institución</b></p>
-	<p>Instituto Superior en Ciencias Emresariales CENTURIA</p>  
+	<p>Instituto Superior en Ciencias Empresariales CENTURIA</p>  
 	<p><b>Departamento</b></p>
 	<p>Central</p>
 	<p><b>Ciudad</b></p>
