--- a/perfildelalumno1537.html
+++ b/perfildelalumno1537.html
@@ -28,8 +28,8 @@
  	<p><b>Título obtenido</b></p>
 	<p>Profesora de Trabajo y Tecnología con énfasis en Arte</p>  
 	<p><b>Denominación del plan de Estudio:</b></p>
-	<p>Formación Espscífica por área en Trabajo y Tecnología con énfasis en Arte</p>
-	<p><b>Institución</b></p>
+	<p>Formación Específica por área en Trabajo y Tecnología con énfasis en Arte</p>
+	<p><b>Institución:</b></p>
 	<p>Universidad Politécnica y Artística</p>  
 	<p><b>Departamento</b></p>
 	<p>Central</p>
