--- a/perfildelalumno1537.html
+++ b/perfildelalumno1537.html
@@ -31,13 +31,13 @@
 	<p>Formación Específica por área en Trabajo y Tecnología con énfasis en Arte</p>
 	<p><b>Institución:</b></p>
 	<p>Universidad Politécnica y Artística</p>  
-	<p><b>Departamento</b></p>
+	<p><b>Departamento:</b></p>
 	<p>Central</p>
-	<p><b>Ciudad</b></p>
+	<p><b>Ciudad:</b></p>
 	<p>San Lorenzo</p>
 	<p><b>Fecha:</b></p>
 	<p>2025-07-15</p>
-	<p><b>Tipo</b></p>
+	<p><b>Tipo:</b></p>
 	<p>Resolución</p>  
 	<p><b>Responsable:</b></p>
 	<p>Dirección de Registro de Título</p>
