--- a/perfilalumnoadmhosp362176482in_data.html
+++ b/perfilalumnoadmhosp362176482in_data.html
@@ -23,11 +23,11 @@
 </head>
 <body>
   <p class="muy-grande">Perfil Académico</p>
-  <p class="grande">MONGES MIÑO<br>JOHANA RAQUEL</p>
+  <p class="grande">OJEDA ABALOS<br>FRANCISCO ROLANDO</p>
  	<p><b>Título obtenido</b></p>
-	<p>Magister en Administración de la Salud Pública</p>  
+	<p>Magister en Administración Hospitalaria</p>  
 	<p><b>Denominación del programa de posgrado</b></p>
-	<p>Maestría en Administración de la Salud Pública</p>
+	<p>Maestría en Administración Hospitalaria</p>
 	<p><b>Institución:</b></p>
 	<p>Universidad Politécnica y Artística del Paraguay</p>  
 	<p><b>Departamento:</b></p>
